--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,12 @@
 	"description": "University information searching app and social network.",
 	"main": "main.js",
 	"scripts": {
-		"start": "node src/main.js",
-		"dev": "nodemon src/main.js",
+		"start": "node dist/main.js",
+		"dev": "nodemon dist/main.js",
 		"lint": "eslint --fix src",
 		"test": "mocha --exit",
-		"typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+		"typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+		"watch": "tsc -w"
 	},
 	"keywords": [],
 	"author": "D",
@@ -17,21 +18,16 @@
 		"url": ""
 	},
 	"dependencies": {
+		"@types/node": "^14.14.14",
 		"bcryptjs": "^2.4.3",
-		"consolidate": "^0.16.0",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
-		"dust": "^0.3.0",
-		"dustjs-helpers": "^1.7.4",
-		"dustjs-linkedin": "^2.7.5",
 		"express": "^4.17.1",
 		"express-mysql-session": "^2.1.4",
 		"express-session": "^1.17.1",
 		"helmet": "^3.23.3",
 		"joi": "^17.1.1",
-		"monk": "^7.3.1",
-		"morgan": "^1.10.0",
 		"mysql": "^2.18.1",
 		"pg": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
