--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "three": "^0.124.0",
+    "vanta": "^0.5.21",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
