--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
 		"@types/node": "^14.14.14",
 		"axios": "^0.21.1",
 		"bcryptjs": "^2.4.3",
+		"connect-pg-simple": "^6.2.1",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
@@ -29,7 +30,8 @@
 		"express-mysql-session": "^2.1.4",
 		"express-session": "^1.17.1",
 		"helmet": "^3.23.3",
-		"joi": "^17.1.1",
+		"joi": "^17.3.0",
+		"knex": "^0.21.15",
 		"mysql": "^2.18.1",
 		"pg": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
