--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "mapbox-gl": "^2.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
