--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
 		"joi": "^17.3.0",
 		"knex": "^0.21.15",
 		"mysql": "^2.18.1",
+		"node-cron": "^2.0.3",
+		"node-fetch": "^2.6.1",
 		"pg": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
 		"ts-node": "^9.1.1",
