--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "stripe": "^8.129.0",
     "three": "^0.124.0",
     "vanta": "^0.5.21",
     "web-vitals": "^0.2.4"
