--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "jquery": "^3.5.1",
     "mapbox-gl": "^2.0.1",
     "node-sass": "^4.14.1",
@@ -19,7 +21,8 @@
     "stripe": "^8.129.0",
     "three": "^0.124.0",
     "vanta": "^0.5.21",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
