--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,7 @@
 NODE_ENV="development"
+
+DOMAIN_DEVELOPMENT_URL="http://localhost:3000"
+DOMAIN_PRODUCTION_URL="https://unilist.ca"
+
+DEVELOPMENT_API_URL="http://localhost:1337/api"
+PRODUCTION_API_URL="http://unilist.ca/api"
