--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
 		"@types/node": "^14.14.14",
 		"axios": "^0.21.1",
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
 		"connect-pg-simple": "^6.2.1",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
