--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"client": "cd client && npm start",
 	"server": "cd server && npm start",
 	"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-	"heroku-postbuild": "cd frontend && npm install && npm run build"
+	"heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
