--- a/package.json
+++ b/package.json
@@ -18,5 +18,40 @@
   "bugs": {
     "url": "https://github.com/e-Dylan/unilist/issues"
   },
+  "dependencies": {
+	"@types/node": "^14.14.14",
+	"axios": "^0.21.1",
+	"bcryptjs": "^2.4.3",
+	"body-parser": "^1.19.0",
+	"connect-pg-simple": "^6.2.1",
+	"cookie-parser": "^1.4.5",
+	"cors": "^2.8.5",
+	"dotenv": "^8.2.0",
+	"express": "^4.17.1",
+	"express-fileupload": "^1.2.0",
+	"express-mysql-session": "^2.1.4",
+	"express-session": "^1.17.1",
+	"helmet": "^3.23.3",
+	"joi": "^17.3.0",
+	"knex": "^0.21.15",
+	"mysql": "^2.18.1",
+	"node-cron": "^2.0.3",
+	"node-fetch": "^2.6.1",
+	"pg": "^8.5.1",
+	"reflect-metadata": "^0.1.13",
+	"stripe": "^8.129.0",
+	"ts-node": "^9.1.1",
+	"typeorm": "^0.2.29",
+	"volleyball": "^1.5.1"
+	},
+	"devDependencies": {
+		"eslint": "^7.5.0",
+		"eslint-config-airbnb-base": "^14.2.0",
+		"eslint-plugin-import": "^2.22.0",
+		"mocha": "^8.1.1",
+		"nodemon": "^2.0.4",
+		"supertest": "^4.0.2",
+		"typescript": "^4.1.3"
+	},
   "homepage": "https://unilisted.vercel.app"
 }
