--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
 NODE_ENV="development"
 
+API_PORT=1337
+
 DOMAIN_DEVELOPMENT_URL="http://localhost:3000"
 DOMAIN_PRODUCTION_URL="https://unilist.ca"
 
