--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/icons": "^1.0.3",
+    "@chakra-ui/react": "^1.1.5",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "emotion-theming": "^11.0.0",
     "formik": "^2.2.6",
+    "framer-motion": "^3.2.2-rc.1",
     "jquery": "^3.5.1",
     "mapbox-gl": "^2.0.1",
     "node-sass": "^4.14.1",
