backend migration for uni searching

--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -1,10 +1,10 @@
 {
 	"type": "postgres",
-	"host": "localhost",
+	"host": "unilist-db-aws.cldikagnm4ob.us-east-1.rds.amazonaws.com",
 	"port": 5432,
-	"username": "role",
-	"password": "root",
-	"database": "universities_db",
+	"username": "postgres",
+	"password": "sakdj2321jodks2ajdkjo21j42kl",
+	"database": "unilist_db_aws",
 	"synchronize": false,
 	"logging": false,
 	"entities": ["dist/entity/*.js"],
